--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,66 @@ html, body {
     width:  100%;
     height: 100%;
     margin: 0;
+    overflow: hidden;
+    font-family: "Bitstream Vera Serif";
 }
 #bg {
 
+}
+
+#editor {
+    border: 1px #ddd solid;
+    border-radius: 3px;
+    position: fixed!important;
+    resize: both;
+    background: rgba(255, 255, 255, .8);
+}
+
+
+.ui-resizable-handle { position: absolute;font-size: 0.1px; display: block; }
+.ui-resizable-disabled .ui-resizable-handle, .ui-resizable-autohide .ui-resizable-handle { display: none; }
+.ui-resizable-n { cursor: n-resize; height: 7px; width: 100%; top: -5px; left: 0; }
+.ui-resizable-s { cursor: s-resize; height: 7px; width: 100%; bottom: -5px; left: 0; }
+.ui-resizable-e { cursor: e-resize; width: 7px; right: -5px; top: 0; height: 100%; }
+.ui-resizable-w { cursor: w-resize; width: 7px; left: -5px; top: 0; height: 100%; }
+.ui-resizable-se { cursor: se-resize; width: 12px; height: 12px; right: 1px; bottom: 1px; }
+.ui-resizable-sw { cursor: sw-resize; width: 9px; height: 9px; left: -5px; bottom: -5px; }
+.ui-resizable-nw { cursor: nw-resize; width: 9px; height: 9px; left: -5px; top: -5px; }
+.ui-resizable-ne { cursor: ne-resize; width: 9px; height: 9px; right: -5px; top: -5px;}
+
+
+#tabs {
+    height: 100%;
+}
+#tabs div {
+    /* Make sure the pages appear below the tabs*/
+    clear: both;
+    width: 100%;
+}
+
+#tabs ul {
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+#tabs ul li {
+    list-style: none;
+    white-space: nowrap;
+    display: inline;
+}
+#tabs ul li a {
+    padding: .5em 1em;
+    text-decoration: none;
+    cursor: pointer;
+    line-height: 33px;
+    color: #000;
+    /* Add line separators */
+    border-left: 1px #ddd solid;
+}
+/* Remove the line on the first tab. */
+#tabs ul li:first-child a {
+    border-left: 1px transparent solid;
+}
+.active-tab {
+    background: #CCDAE8;
 }
