--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ html, body {
 }
 
 .checkered {
-    background: url("/checkers.png");
+    background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAAAAAA6mKC9AAAAF0lEQVQY02OYCQVpUMAwQAIwBkxigAQAwP1/gTXPeQkAAAAASUVORK5CYII=);
     background-attachment:fixed;
 }
 
