--- a/styles.css
+++ b/styles.css
@@ -6,11 +6,16 @@ html, body {
     font-family: "Bitstream Vera Serif", serif;
 }
 
+.container {
+    position: fixed;
+}
+
 .editor {
     border: 1px #ddd solid;
     border-radius: 3px;
     position: fixed!important;
     background: rgba(255, 255, 255, .8);
+    z-index: 10;
 }
 
 .canvas_container {
@@ -23,6 +28,7 @@ html, body {
     position: fixed;
     pointer-events: none;
     opacity: .5;
+    z-index: 99;
 }
 
 .checkered {
